app/assets/stylesheets/parallax.scss
.parallax {
  font-family: 'Rubik' !important;
  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.0)), asset-url('banner_images/radial-bubble-4.png')no-repeat center center;
  background-attachment: fixed;
  background-size: cover;
  padding-top: 18%;
  height: 100vh;
}

.parallax,
.module-slides {
    text-align: center;
}

.full-height {
    padding: 0;
}

.parallax .container {
    position: relative;
    z-index: 2;
}


.parallax .container > .row > [class*="col-"] > *:last-child {
    margin-bottom: 0;
}

.parallax .btn {
    margin: 3px;
}


.parallax h1,
.parallax h2,
.parallax h3,
.parallax h4,
.parallax h5,
.parallax h6 {
    text-transform: uppercase;
    font-weight: 500;
    color: #f7f7f7;
}

.parallax h1.h1 {
    letter-spacing: 20px;
    font-size: 64px;
    margin-right: 20px !important;
}


.parallax h1.h2 {
    letter-spacing: 14px;
    font-size: 44px;
    margin-right: -14px;
}

.parallax h1.h3 {
    letter-spacing: 10px;
    font-size: 36px;
    margin-right: -10px;
}

.parallax h1.h4 {
    letter-spacing: 8px;
    font-size: 24px;
    margin-right: -8px;
}

.parallax h1.h5 {
    letter-spacing: 6px;
    font-size: 14px;
    margin-right: -6px;
}

.parallax h1.h6 {
    letter-spacing: 2.8px;
    font-size: 14px;
    margin-right: -2.8px;
    font-weight: 600;
    color: black;
    // background-color: #F55;
    background-color: rgba(255,85,85, 0.8);
    width: 595px;
    padding-left: 10px;
}

.parallax p {
    font-size: 15px;
}

@media (max-width: 992px) {
    .wrapper {
        // padding-top: 80px;
    }

    .parallax {
        // height: 90vh;
        // padding: 120px 0;
    }

    .parallax h1.h1 {
      letter-spacing: 20px;
      font-size: 64px;
      margin-right: 20px !important;

    }


    .parallax h1.h1 {
        font-size: 44.8px;
    }


    .parallax h1.h2 {
        font-size: 35.2px;
    }


    .parallax h1.h3 {
        font-size: 28.8px;
    }


    .parallax h1.h4 {
        font-size: 19.2px;
    }


    .parallax h1.h5 {
        font-size: 12.6px;
    }


    .parallax h1.h6 {
        font-size: 9px;
        width: 65%;
        padding-left: 10px;
    }


    .parallax br {
        display: none;
    }

    .mouse-icon {
        display: none;
    }
}

@media (max-width: 767px) {
    .parallax h1.h1 {
        font-size: 32px;
        margin-right: 20px !important;
    }

    .parallax h1.h2 {
        font-size: 26.4px;
    }

    .parallax h1.h3 {
        font-size: 21.6px;
    }

    .parallax h1.h4 {
        font-size: 14.4px;
    }

    .parallax h1.h5 {
        font-size: 11.2px;
    }

    .parallax h1.h6 {
        font-size: 9px;
    }

    .parallax p {
        font-size: 13.5px;
    }
}

@media (max-width: 568px) {
    .parallax h1.h1 {
        font-size: 25.6px;
    }

    .parallax h1.h2 {
        font-size: 22px;
    }

    .parallax h1.h3 {
        font-size: 18px;
    }

    .parallax h1.h4 {
        font-size: 11px;
    }

    .parallax h1.h5 {
        font-size: 9.8px;
    }

    .parallax h1.h6 {
        font-size: 9px;
    }

    .parallax p {
        font-size: 11px;
    }
}



@media (min-width: 1400px) {

  .parallax {
    // padding: 440px 0 100px 0;
  }
}

